@@ -18,6 +18,9 @@ STACKING:
 DOWNLOADERS:
 1. ms2asdf(): added option to specify response file.
 
+DISPERSION:
+1. get_dispersion_waveforms: Use period to get the evenly-spaced period vector.
+
 ==================================================================
 Updates in v0.7.3
 NOISE:
